# Python-Web-AI-Hub

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: factories.py  models.py  urls.py
accounts/management/commands/: seed.py
accounts/migrations/: 0001_initial.py
ai_hub/: asgi.py  settings.py  urls.py  wsgi.py
docs/: todo.md
templates/: base.html
templates/accounts/: user_list.html
